[package]
name = "cf-worker-http-client"
version = "0.1.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Minimal HTTP client for Cloudflare Workers, in Rust"
categories = ["web-programming::http-client", "wasm"]
keywords = ["http", "wasm", "cloudflare", "workers"]
edition = "2021"
rust-version = "1.63"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/cf-worker-http-client"

[dependencies]
cookie = { version = "0.16.*", default-features = false }
cookie_store = { git = "https://github.com/pfernie/cookie_store", default-features = false, features = ["wasm-bindgen"] }
parking_lot = { version = "0.12.*", default-features = false }
url = { version = "2.2.*", default-features = false }
worker = { version = "0.0.*", default-features = false }
